update:  the css file

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ nav {
     padding: 1rem;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
+    font-size: xx-large;
 }
 
 footer {
